[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.12.1", features = ["tokio", "debug"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
chrono = "0.4"