[package]
name = "system_monitor_iced"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["tokio", "debug"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
sysinfo = "0.30.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
csv = "1.3"
